added the paragraph tags around the copyright that i forgot :)

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<img src="images/chua75.jpg" alt="Amy Chua photo">
 	</main>
 	<footer>
-		&copy; Copyright Courtney Pobol, 2023
+		<p>&copy; Copyright Courtney Pobol, 2023</p>
 	</footer>
 </body>
 </html>
